style.css
html,
body {
    margin: 0;
    padding: 0;
    cursor: url("./assets/img/cursors/whiteWait.webp") 0 0, auto;
    /* cursor: url("./assets/img/cursors/whiteCursor.svg") 0 0, auto; */

    background-color: #000080;
    /* dial up loading background */

    background-size: 100px;
    background-position: 0px 100px;
}

#loading {
    width: 40%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

}

#loading img {
    width: 100%;
    border: 3px solid black;
}


/* SCROLL BAR */
/* width */
::-webkit-scrollbar {
    width: 25px;
}

/* track */
::-webkit-scrollbar-track {
    background-image: url("https://t3.ftcdn.net/jpg/04/96/63/80/360_F_496638091_v0Y3hmCvb9y8JDKEGyWC455Ex4aNGPen.jpg");
    background-size: 150px;
}

/* buttons */
::-webkit-scrollbar-button {
    background-size: 10px;
    background-repeat: no-repeat;
    background-position: center;
    width: 25px;
    height: 25px;
    background-color: #c0c0c0;
    ;
    border: outset 3px rgb(168, 168, 168);
}

::-webkit-scrollbar-button:hover {
    background-color: #a9a9a9;
}

::-webkit-scrollbar-button:active {
    background-color: #8a8a8a;
}

::-webkit-scrollbar-button:vertical:decrement {
    background-image: url("assets/img/up.png");
}

::-webkit-scrollbar-button:vertical:increment {
    background-image: url("assets/img/down.png");
}


/* handle */
::-webkit-scrollbar-thumb {
    background-color: #c0c0c0;
    border: 3px rgb(168, 168, 168) outset;
}

::-webkit-scrollbar-thumb:hover {
    background: #a9a9a9;
}

::-webkit-scrollbar-thumb:active {
    background: #8a8a8a;
}


#content {
    display: none;
}


.container-fluid {
    margin: 0px;
    padding: 0px;
}

#marqueeContainer {
    width: 100%;
    height: 4vh;
    margin: 0px;
    padding: 0px;
    border-bottom: solid 3px black;
    display: flex;
    position: relative;
    overflow: hidden;
    background-color: rgba(0, 0, 0, 0.5)
}

#marquee {
    position: absolute;
    font-size: 20px;
    left: 99vw;
    color: white;
}


#followupMarquee {
    position: absolute;
    font-size: 20px;
    color: white;
}


#heroHeader {
    width: 100%;
    padding: 10px;
    background-color: #d585d1;
    text-align: center;
    height: 96vh;
    border-bottom: solid 3px black;
    display: flex;
    align-items: center;
    justify-content: center;
}


#name {
    font-size: 50px;
    margin: 0px;
    padding: 0px;
}

#name div {
    display: inline-block;
}

@media screen and (max-width: 650px) {
    #name div {
        display: block;
    }
}

#name span {
    display: inline-block;
}

/* name bounce animation */
@keyframes nameBounce {
    0% {
        transform: translateY(0px)
    }

    50% {
        transform: translateY(-20px)
    }

    100% {
        transform: translateY(0px)
    }
}


#name span:nth-child(1) {
    animation-delay: 0s;
}

#name span:nth-child(2) {
    animation-delay: 0.1s;
}

#name span:nth-child(3) {
    animation-delay: 0.2s;
}

#name span:nth-child(4) {
    animation-delay: 0.3s;
}

#name span:nth-child(5) {
    animation-delay: 0.4s;
}

#name span:nth-child(6) {
    animation-delay: 0.5s;
}

#name span:nth-child(7) {
    animation-delay: 0.6s;
}

#name span:nth-child(8) {
    animation-delay: 0.7s;
}

#name span:nth-child(9) {
    animation-delay: 0.8s;
}

#name span:nth-child(10) {
    animation-delay: 0.9s;
}

#name span:nth-child(11) {
    animation-delay: 1s;
}

#name span:nth-child(12) {
    animation-delay: 1.1s;
}

#name span:nth-child(13) {
    animation-delay: 1.2s;
}

#name span:nth-child(14) {
    animation-delay: 1.3s;
}

#name span:nth-child(15) {
    animation-delay: 1.4s;
}

#name span:nth-child(16) {
    animation-delay: 1.5s;
}


a,
.clickable {
    cursor: url("./assets/img/cursors/whitePointer.svg") 15 0, auto;
}


#subtitle {
    font-size: 18px;
}

#subtitle span {
    font-size: 20px;
}

#desc {
    font-size: 20px;
}

.fa-brands {
    font-size: 55px;
    margin: 10px;
    color: rgb(95, 0, 95);
}

.fa-brands:hover {
    color: rgb(71, 0, 71);
}


#star1 {
    width: 7vw;
    margin: auto;
    position: absolute;
    left: 10px;
    top: 5vh;
    animation: starShake 4s infinite;
}


#star2 {
    width: 7vw;
    margin: auto;
    position: absolute;
    left: calc(100% - 10px - 7vw);
    top: calc(100% - 1vh - 7.5vw);
    animation: starShake 4s infinite;
}


#star1,
#star2:hover {
    cursor: url("assets/img/cursors/whiteGrab.webp") 0 0, grab;
    ;
}


#gptDiv {
    background-color: #212121;
    padding-top: 30px;
    padding-bottom: 30px;
}

#questionBox {
    width: 55%;
    margin: auto;
    background-color: #2f2f2f;
    border-radius: 26px;
    padding: 0.375rem;
    padding-left: 30px;
    padding-right: 13px;
    display: flex;
    justify-content: space-between;
}

#question {
    font-size: 18px;
    color: #9b9b9b;
    margin: 0;
}


#questionBox i {
    font-size: 28px;
    color: #676767;
}

#answer {
    color: white;
    width: 55%;
    margin: auto;
    font-family: 'Noto Sans';
    line-height: 1.8;
}

#projectsDiv {
    width: 95%;
    margin: auto;
}


.card {
    height: 350px;
}


@media only screen and (max-width: 650px) {

    #questionBox,
    #answer {
        width: 90%;
    }
}


/* @keyframes cardShake {
    0%  {transform: rotateZ(1deg);}
    50% {transform: rotateZ(-1deg);}
    100% {transform: rotateZ(1deg);}
} */

@keyframes starShake {
    0% {
        transform: rotateZ(0deg);
    }

    6% {
        transform: rotateZ(-7deg);
    }

    12% {
        transform: rotateZ(7deg);
    }

    18% {
        transform: rotateZ(-7deg);
    }

    24% {
        transform: rotateZ(7deg);
    }

    30% {
        transform: rotateZ(-7deg);
    }

    36% {
        transform: rotateZ(7deg);
    }


    39% {
        transform: rotateZ(0deg);
    }

    100% {
        transform: rotateZ(0deg);
    }
}

/* shake two oscillations for 2 seconds*/
/* break for 3 seconds*/

@media only screen and (max-width: 530px) {
    .card {
        font-size: 14px;
        height: 375px;
    }
}

.card {
    border: none;
    perspective: 1000px;
    background-color: transparent;
    margin-bottom: 20px;
}

.card ul li {
    margin-top: 5px;
}

.cardInner {
    position: relative;
    width: 100%;
    height: 100%;
    transform-style: preserve-3d;
    transition: transform 0.6s;
    color: white;
    font-family: 'Lexend';
    font-weight: 300;
}

.card:hover .cardInner {
    transform: rotateY(180deg);
}

.card:hover {
    animation-play-state: paused;
}

.card {
    perspective: 1000px;
}


.cardFront,
.oddCardBack,
.evenCardBack {
    padding: 15px;
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
}


.cardFront {
    font-family: 'Lexend';
    color: white;

    background-position: center;
    background-size: cover;

    display: flex;
    justify-content: center;
    align-items: center;
}

.oddCardBack {
    background-color: rgb(44, 44, 44);
    color: white;
    transform: rotateY(180deg);
}

.evenCardBack {
    background-color: rgb(44, 44, 44);
    color: white;
    transform: rotateY(180deg);
}

.heartContainer {
    display: grid;
    grid-template-columns: auto auto;
    width: 200px;
    /* = heart width, so it will center on the heart */
    margin: auto;
}

.heartContainer>div {
    text-align: center;
    padding: -5px;
    width: 10px;
}

#speech {
    transform: translate(-20px, 30px);
    width: 300px;
}

#heart {
    display: block;
    margin: auto;
    width: 200px;
}

@media only screen and (max-width: 500px) {

    .heartContainer {
        width: 250px;
    }

    #speech {
        width: 200px;
    }

    #heart {
        width: 150px;
    }
}

#footer {
    width: 100%;
    background-color: rgb(0, 0, 0, 0.5);
    border-top: 3px solid black;
    margin-bottom: 0;
    padding: 10px;
}

#waterlooWR {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    font-size: 20px;
    margin: auto;
}

#waterlooWR img {
    filter: invert(23%) sepia(70%) saturate(4464%) hue-rotate(304deg) brightness(89%) contrast(98%);
    /* make pink */
    width: 30px;
    height: auto;
    opacity: 1;
}

#waterlooWR a {
    text-decoration: none;
    color: #DF1AA0;
    cursor: pointer;
}

#footer p {
    margin-bottom: 0;
    color: white;
}

#MKCredit {
    font-family: 'Helvetica';
    cursor: pointer;
}

#CWCredit {
    font-family: 'Comic Sans MS', cursive;
    cursor: pointer;
}

